Description section no longer overlaps input on mobile when keyboard is shown

--- a/src/search/Description/Description.scss
+++ b/src/search/Description/Description.scss
@@ -8,6 +8,9 @@
     position: fixed;
     bottom: 0;
   }
+  @media only screen and (max-height: 400px) {
+    // display: none;
+  }
 
   ul {
     list-style: none;
