--- a/src/search/ResultsList/ResultsList.scss
+++ b/src/search/ResultsList/ResultsList.scss
@@ -3,7 +3,7 @@
   box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.25);
   background-color: white;
   // Increase z-index so box shadow from input doesn't overlap search results.
-  z-index: 100;
+  z-index: 200;
 
   ul {
     margin: 0;
