--- a/src/search/SearchView.scss
+++ b/src/search/SearchView.scss
@@ -14,7 +14,7 @@
     max-height: 475px;
     background: url('./background.svg') no-repeat;
     background-position: center bottom;
-    z-index: -9;
+    z-index: -100;
   }
 
   &__container {
